Fixed broken link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ title: Fudsquare
       <img alt="Screen shot of code" src="{{ site.baseurl }}/images/ArchivedCodeScreenshot.png">
       <h2>Rough Layout</h2>
       <p>
-        I then created a new project using Jekyll, deleted unneccessary default files that Jekyll generates for a new project, and added the Bootsrap CDN links. I used dummy images useing Placehold.it to quickly work through the rough layout. <a href="rough_layout.html"></a>I ended up with this</a>.
+        I then created a new project using Jekyll, deleted unneccessary default files that Jekyll generates for a new project, and added the Bootsrap CDN links. I used dummy images useing Placehold.it to quickly work through the rough layout. <a href="rough_layout.html">I ended up with this</a>.
       </p>
   </div>
 </div>
