Added footer code and descriptive text to palachold.it images

--- a/rough_layout.html
+++ b/rough_layout.html
@@ -33,7 +33,7 @@ title: Fudsquare
 
     </div>
   </div>
-<div class="row learn">
+<div class="row learn-rough">
   <div class="col-sm-6 text-center">
     <h1>Let The Buyer Be <br><small>Your Business Marketing</small></h1>
 
@@ -51,14 +51,14 @@ title: Fudsquare
     <img class="img-responsive" src="http://placehold.it/455x400?text=Device Pic 1">
   </div>
   <div class="col-xs-12 col-sm-6">
-    <img src="http://placehold.it/350x150?text=Placeholder" class="pull-right">
+    <img src="http://placehold.it/350x150?text=Glyphs" class="pull-right">
     <h3 style="margin-top:4em;">Free Application</h3>
     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enimad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip
       ex ea commodo consequat.</p>
     <p><a href="#">Available on Appstore</a> | <a href="#">Available on Playstore</a></p>
   </div>
 </div>
-<div class="row order">
+<div class="row order-rough">
   <div class="col-xs-12 col-sm-6">
     <h3>Order With Application.</h3>
     <p class="">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enimad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip
@@ -96,16 +96,33 @@ title: Fudsquare
     <img class="img-responsive" src="http://placehold.it/455x400?text=Device Pic 2">
   </div>
   <div class="col-xs-12 col-sm-6">
-    <img src="http://placehold.it/350x150?text=Placeholder" class="pull-right">
+    <img src="http://placehold.it/350x150?text=Glyphs" class="pull-right">
     <h3 style="margin-top:4em;">Checkin Place.</h3>
     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enimad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip
       ex ea commodo consequat.</p>
   </div>
 </div>
-<div class="row sales">
+<div class="row sales-rough">
   <div class="col-sm-4 col-sm-offset-4">
     <h3>Increase Your Sales Now.</h3>
     <button type="button" class="btn btn-success btn-block">Get Started ></button>
     <h3>&nbsp;</h3>
   </div>
 </div>
+<footer class="footer">
+  <div class="container">
+    <hr>
+    <div class="row">
+      <div class="col-xs-6">
+        <img src="http://placehold.it/171x36?text=Logo">
+        <p class="copyright">&copy; 2014 Fudsquare. All Rights Reserved.</p>
+      </div>
+      <div class="col-xs-6">
+        <img src="http://placehold.it/40x40?text=f" class="img-circle pull-right" alt="Facebook">
+        <img src="http://placehold.it/40x40?text=t" class="img-circle pull-right" alt="Twitter">
+        <br /><br /><br />
+        <br /><br /><br />
+      </div>
+    </div>
+  </div>
+</footer>
