--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@ title: Fudsquare
       <img alt="Screen shot of code" class="img-responsive" src="{{ site.baseurl }}/images/ArchivedCodeScreenshot.png">
       <h2>Rough Layout</h2>
       <p>
-        I then created a new project using Jekyll, deleted unneccessary default files that Jekyll generates for a new project, and added the Bootsrap CDN links. I used dummy images useing Placehold.it to quickly work through the rough layout. <a href="rough_layout.html">I ended up with this</a>.
+        I then created a new project using Jekyll, deleted unneccessary default files that Jekyll generates for a new project, and added the Bootsrap CDN links. I used dummy images using Placehold.it to quickly work through the rough layout. <a href="rough_layout.html">I ended up with this</a>.
       </p>
-      <h2>Refineing the Rough Layout</h2>
+      <h2>Refining the Rough Layout</h2>
       <p>
         The next thing I worked on was adding the images from the archived html mock up to create a responsive bootstrap port of the design. <a href="webpage-port.html">Here is where you can see my progress</a>. It is nearly finished.
       </p>
