Added Social Media Buttons and Image Tweak

--- a/webpage-port.html
+++ b/webpage-port.html
@@ -3,6 +3,12 @@ layout: fudsquare
 title: Fudsquare
 ---
 
+<div class="row">
+  <div class="col-xs-12 text-right bold-links" style="padding: .5em 1em 0em 1em;">
+    <a href="#"><img src="{{ site.baseurl }}/images/Britania.png"></a>&nbsp;&nbsp;
+    <a href="#" style="margin-right: 1em;"><img style="border: 1px solid #eb4d66;" src="{{ site.baseurl }}/images/Indonesia.png"></a>
+  </div>
+</div>
 
 <div id="demo" class="collapse  hidden-md hidden-lg">
 <form class="form-inline text-right" style="padding: 10px;">
@@ -64,7 +70,7 @@ title: Fudsquare
     <a href="#" class="btn btn-outline ">Watch Video <span class="glyphicon glyphicon-expand"></span></a>
   </div>
   <div class="col-sm-6"style="height: 34em; overflow: hidden;">
-    <img style="padding: 3em 0;" src="{{ site.baseurl }}/images/Devices.png">
+    <img style="padding: 3em 0; width: 250px;" src="{{ site.baseurl }}/images/Devices.png">
   </div>
 </div>
 
@@ -159,7 +165,7 @@ title: Fudsquare
 
 
 <div class="row sales">
-  <div class="col-sm-6 col-sm-offset-3 text-center" style="padding:5em;">
+  <div class="col-sm-8 col-sm-offset-2 text-center" style="padding:5em;">
     <h3>Increase Your Sales Now.</h3>
     <button type="button" class="btn btn-success btn-block">Get Started ></button>
   </div>
@@ -172,9 +178,18 @@ title: Fudsquare
         <img src="{{ site.baseurl }}/images/logo.png">
         <p class="copyright">&copy; 2014 Fudsquare. All Rights Reserved.</p>
       </div>
-      <div class="col-xs-6">
-        <img src="http://placehold.it/40x40?text=f" class="img-circle pull-right" alt="Facebook">
-        <img src="http://placehold.it/40x40?text=t" class="img-circle pull-right" alt="Twitter">
+      <div class="col-xs-6 text-right">
+        <span class="fa-stack fa-lg">
+          <i style="color: rgb(80, 124, 190);" class="fa fa-circle fa-stack-2x"></i>
+          <i style="color:white;" class="fa fa-facebook fa-stack-1x"></i>
+        </span>
+        <span class="fa-stack fa-lg">
+          <i style="color: rgb(99, 205, 241);" class="fa fa-circle fa-stack-2x"></i>
+          <i style="color:white;" class="fa fa-twitter fa-stack-1x"></i>
+        </span>
+        <p>
+          <br><br><br><br>
+        </p>
       </div>
     </div>
   </div>
