--- a/dribbble-port.html
+++ b/dribbble-port.html
@@ -2,9 +2,13 @@
 layout: fudsquare
 title: Fudsquare
 ---
+<div class="row">
+  <div class="col-xs-12 text-right bold-links" style="padding: .5em 1em 0em 1em;">
+    <a href="#">ENG</a> | <a href="#" style="margin-right: 1em;">IND</a>
+  </div>
+</div>
 
-
-<div id="demo" class="collapse  hidden-md hidden-lg">
+<div id="login" class="collapse  hidden-md hidden-lg">
 <form class="form-inline text-right" style="padding: 10px;">
   <div class="form-group">
     <label class="sr-only" for="email">Email address</label>
@@ -22,16 +26,16 @@ title: Fudsquare
 <div class="row">
   <div class="col-xs-8 col-md-12">
     <nav class="navbar navbar-default">
-      <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="#"><img src="{{ site.baseurl }}/images/logo.png"></a>
         </div>
         <ul class="nav navbar-nav">
+          <li><a href="#">PRICING</a></li>
           <li><a href="#">FEATURES</a></li>
           <li><a href="#">HELP</a></li>
         </ul>
 
-        <form class="form-inline text-right hidden-xs hidden-sm" style="padding: 10px;">
+        <form class="form-inline text-right hidden-xs hidden-sm" style="padding: 10px 0px;">
           <div class="form-group">
             <label class="sr-only" for="email">Email address</label>
             <input type="email" class="form-control" id="email" placeholder="Email">
@@ -45,11 +49,10 @@ title: Fudsquare
             <a href="#" class="btn btn-default ">Sign Up</a>
           </div>
         </form>
-      </div>
     </nav>
   </div>
   <div class="col-xs-4 visible-xs visible-sm text-right">
-    <button data-toggle="collapse" data-target="#demo" class=" btn btn-success btn-login-open clearfix" style="margin-top: 1em;"><span class="glyphicon glyphicon-collapse-up"></span> Login</button>
+    <button data-toggle="collapse" data-target="#login" class=" btn btn-success btn-login-open clearfix" style="margin-top: 1em;"><span class="glyphicon glyphicon-collapse-up"></span> Login</button>
   </div>
 </div>
 
@@ -72,7 +75,10 @@ title: Fudsquare
     <img style="margin-top:3em;" src="{{ site.baseurl }}/images/Device1.png">
   </div>
   <div class="col-xs-12 col-sm-6">
-    <h3 style="margin-top:4em;">Free Application</h3>
+    <div class="hidden-xs" style="height: 2em;">
+      &nbsp;
+    </div>
+    <h3 style="margin-top:2em;">Free Application</h3>
     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enimad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip
       ex ea commodo consequat.</p>
     <p><a href="#">Available on Appstore</a> | <a href="#">Available on Playstore</a></p>
@@ -84,7 +90,10 @@ title: Fudsquare
 
 <div class="row order">
   <div class="col-xs-12 col-sm-6">
-    <h3 style="margin-top:10em;">Order With Application.</h3>
+    <div class="hidden-xs" style="height: 10em;">
+      &nbsp;
+    </div>
+    <h3 style="margin-top:2em;">Order With Application.</h3>
     <p class="">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enimad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip
       ex ea commodo consequat.</p>
   </div>
@@ -117,7 +126,7 @@ title: Fudsquare
     <h4>Get Access</h4>
     <p>Nam liber tempor cum soluta nobis eleifend optioncongue nihil imperdiet doming id quod mazim placerat facer possim assum.</p>
   </div>
-  <div class="col-xs-6 col-sm-4">
+  <div class="col-xs-12 col-sm-4">
 
     <span class="fa-stack fa-3x">
       <i class="fa fa-circle-thin fa-stack-2x"></i>
@@ -133,7 +142,10 @@ title: Fudsquare
     <img class="img-responsive" style="margin-top: 5em;" src="{{ site.baseurl }}/images/Samsung.png">
   </div>
   <div class="col-xs-12 col-sm-6">
-    <h3 style="margin-top:8em;">Checkin Place.</h3>
+    <div class="hidden-xs" style="height: 6em;">
+      &nbsp;
+    </div>
+    <h3 style="margin-top:2em;">Checkin Place.</h3>
     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enimad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip
       ex ea commodo consequat.</p>
   </div>
@@ -142,8 +154,8 @@ title: Fudsquare
 
 
 
-<div class="row sales">
-  <div class="col-sm-6 col-sm-offset-3 text-center" style="padding:5em;">
+<div class="row sales-dribbble">
+  <div class="col-sm-8 col-sm-offset-2 text-center" style="padding:5em;">
     <h3>Increase Your Sales Now.</h3>
     <button type="button" class="btn btn-success btn-block">Get Started ></button>
   </div>
@@ -174,15 +186,27 @@ title: Fudsquare
 </nav>
 <footer class="footer">
   <div class="container">
+  <div class="row">
+    <div class="col-xs-12 footer-links bold-links">
+      <a href="#">Help</a>
+      <a href="#">Terms of Use</a>
+      <a href="#">Privacy Policy</a>
+      <a href="#">Pricing</a>
+      <a href="#">About</a>
+      <a href="#">Blog</a>
+    </div>
+  </div>
     <hr>
     <div class="row">
       <div class="col-xs-6">
         <img src="{{ site.baseurl }}/images/logo.png">
         <p class="copyright">&copy; 2014 Fudsquare. All Rights Reserved.</p>
       </div>
-      <div class="col-xs-6">
-        <img src="http://placehold.it/40x40?text=f" class="img-circle pull-right" alt="Facebook">
-        <img src="http://placehold.it/40x40?text=t" class="img-circle pull-right" alt="Twitter">
+      <div class="col-xs-6 text-right social">
+        <i class="fa fa-2x fa-facebook"></i>&nbsp;
+        <i class="fa fa-2x fa-google-plus"></i>&nbsp;
+        <i class="fa fa-2x fa-twitter"></i>&nbsp;
+        <i class="fa fa-2x fa-linkedin"></i>
         <p>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br></p>
       </div>
     </div>
