--- a/webpage-port.html
+++ b/webpage-port.html
@@ -30,7 +30,7 @@ title: Fudsquare
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#"><img src="{{ site.baseurl }}/images/logo.png"></a>
+          <a class="navbar-brand" href="#"><img src="{{ site.baseurl }}/images/Logo.png"></a>
         </div>
         <ul class="nav navbar-nav">
           <li><a href="#">FEATURES</a></li>
@@ -175,7 +175,7 @@ title: Fudsquare
     <hr>
     <div class="row">
       <div class="col-xs-6">
-        <img src="{{ site.baseurl }}/images/logo.png">
+        <img src="{{ site.baseurl }}/images/Logo.png">
         <p class="copyright">&copy; 2014 Fudsquare. All Rights Reserved.</p>
       </div>
       <div class="col-xs-6 text-right">
