--- a/dribbble-port.html
+++ b/dribbble-port.html
@@ -27,7 +27,7 @@ title: Fudsquare
   <div class="col-xs-8 col-md-12">
     <nav class="navbar navbar-default">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#"><img src="{{ site.baseurl }}/images/logo.png"></a>
+          <a class="navbar-brand" href="#"><img src="{{ site.baseurl }}/images/Logo.png"></a>
         </div>
         <ul class="nav navbar-nav">
           <li><a href="#">PRICING</a></li>
@@ -199,7 +199,7 @@ title: Fudsquare
     <hr>
     <div class="row">
       <div class="col-xs-6">
-        <img src="{{ site.baseurl }}/images/logo.png">
+        <img src="{{ site.baseurl }}/images/Logo.png">
         <p class="copyright">&copy; 2014 Fudsquare. All Rights Reserved.</p>
       </div>
       <div class="col-xs-6 text-right social">
