--- a/dribbble-port.html
+++ b/dribbble-port.html
@@ -203,10 +203,10 @@ title: Fudsquare
         <p class="copyright">&copy; 2014 Fudsquare. All Rights Reserved.</p>
       </div>
       <div class="col-xs-6 text-right social">
-        <i class="fa fa-2x fa-facebook"></i>&nbsp;
-        <i class="fa fa-2x fa-google-plus"></i>&nbsp;
-        <i class="fa fa-2x fa-twitter"></i>&nbsp;
-        <i class="fa fa-2x fa-linkedin"></i>
+        <i class="fa fa-lg fa-facebook"></i>&nbsp;
+        <i class="fa fa-lg fa-google-plus"></i>&nbsp;
+        <i class="fa fa-lg fa-twitter"></i>&nbsp;
+        <i class="fa fa-lg fa-linkedin"></i>
         <p>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br></p>
       </div>
     </div>
