Added App Store Buttons

--- a/my-take.html
+++ b/my-take.html
@@ -81,7 +81,14 @@ title: Fudsquare
     <h3 style="margin-top:2em;">Free Application</h3>
     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enimad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip
       ex ea commodo consequat.</p>
-    <p><a href="#">Available on Appstore</a> | <a href="#">Available on Playstore</a></p>
+    <p>
+      <a href="#">
+        <img src="{{ site.baseurl }}/images/app-store-badge.svg" />
+      </a>
+      <a href="#">
+        <img src="{{ site.baseurl }}/images/en-play-badge.png" style="width: 135px;" />
+      </a>
+    </p>
   </div>
 </div>
 
