Updated Action Points
Replace Lorem text with better copy

--- a/my-take.html
+++ b/my-take.html
@@ -113,35 +113,37 @@ title: Fudsquare
 
 
 <div class="row points text-center">
+
+<div class="col-xs-6 col-sm-4">
+
+  <span class="fa-stack fa-3x">
+    <i class="fa fa-circle-thin fa-stack-2x"></i>
+    <i class="fa fa-binoculars fa-stack-1x"></i>
+  </span>
+
+  <h4>Find a Dish</h4>
+  <p>Search our extensive listings to find exactly what you are hungry for or research the most popular in the area.</p>
+</div>
   <div class="col-xs-6 col-sm-4">
 
     <span class="fa-stack fa-3x">
       <i class="fa fa-circle-thin fa-stack-2x"></i>
-      1
+      <i class="fa fa-check-square-o fa-stack-1x"></i>
     </span>
 
-    <h4>Sign Up</h4>
-    <p>Nam liber tempor cum soluta nobis eleifend optioncongue nihil imperdiet doming id quod mazim placerat facer possim assum.</p>
+    <h4>Check In to Order</h4>
+    <p>Order immediately when you check in with the app.</p>
   </div>
-  <div class="col-xs-6 col-sm-4">
 
-    <span class="fa-stack fa-3x">
-      <i class="fa fa-circle-thin fa-stack-2x"></i>
-      2
-    </span>
-
-    <h4>Get Access</h4>
-    <p>Nam liber tempor cum soluta nobis eleifend optioncongue nihil imperdiet doming id quod mazim placerat facer possim assum.</p>
-  </div>
   <div class="col-xs-12 col-sm-4">
 
     <span class="fa-stack fa-3x">
       <i class="fa fa-circle-thin fa-stack-2x"></i>
-      3
+      <i class="fa fa-star-half-o fa-stack-1x"></i>
     </span>
 
-    <h4>Increase Turnover</h4>
-    <p>Nam liber tempor cum soluta nobis eleifend optioncongue nihil imperdiet doming id quod mazim placerat facer possim assum.</p>
+    <h4>Rate Your Plate</h4>
+    <p>Make your tastes known with star ratings and comments. As you rate more food suggestions for other delights are delivered to you.</p>
   </div>
 </div>
 <div class="row">
