Changed Tag Line

--- a/my-take.html
+++ b/my-take.html
@@ -61,7 +61,7 @@ title: Fudsquare
 
 <div class="row learn">
   <div class="col-xs-12 text-center">
-    <h1 style="margin: 2em; color: white;">Let The Buyer Be Your Business Marketing</h1>
+    <h1 style="margin: 2em; color: white;">Foodies: You've found the app for YOU</h1>
 
     <a href="#" class="btn btn-outline ">Watch Video <span class="glyphicon glyphicon-expand"></span></a>
   </div>
@@ -171,28 +171,6 @@ title: Fudsquare
 </div>
 
 
-
-
-<nav class="navbar navbar-inverse navbar-fixed-bottom" style="color:white;">
-  <div class="container-fluid">
-    <div class="col-xs-3">
-         <span class = "hidden-xs">xs</span>
-         <span class = "visible-xs">✔ xs</span>
-    </div>
-    <div class="col-xs-3">
-         <span class = "hidden-sm">sm</span>
-         <span class = "visible-sm">✔ sm</span>
-    </div>
-    <div class="col-xs-3">
-         <span class = "hidden-md">md</span>
-         <span class = "visible-md">✔ md</span>
-    </div>
-    <div class="col-xs-3">
-         <span class = "hidden-lg">lg</span>
-         <span class = "visible-lg">✔ lg</span>
-    </div>
-  </div>
-</nav>
 <footer class="footer">
   <div class="row">
     <div class="col-xs-12 footer-links bold-links">
@@ -218,3 +196,25 @@ title: Fudsquare
     </div>
   </div>
 </footer>
+
+
+<nav class="navbar navbar-inverse navbar-fixed-bottom" style="color:white;">
+  <div class="container-fluid">
+    <div class="col-xs-3">
+         <span class = "hidden-xs">xs</span>
+         <span class = "visible-xs">✔ xs</span>
+    </div>
+    <div class="col-xs-3">
+         <span class = "hidden-sm">sm</span>
+         <span class = "visible-sm">✔ sm</span>
+    </div>
+    <div class="col-xs-3">
+         <span class = "hidden-md">md</span>
+         <span class = "visible-md">✔ md</span>
+    </div>
+    <div class="col-xs-3">
+         <span class = "hidden-lg">lg</span>
+         <span class = "visible-lg">✔ lg</span>
+    </div>
+  </div>
+</nav>
