Refining the Copy

--- a/my-take.html
+++ b/my-take.html
@@ -131,8 +131,8 @@ title: Fudsquare
       <i class="fa fa-check-square-o fa-stack-1x"></i>
     </span>
 
-    <h4>Check In to Order</h4>
-    <p>Order immediately when you check in with the app.</p>
+    <h4>Check In With Your Choice</h4>
+    <p>Build a history of what you have tried and track your favorites.</p>
   </div>
 
   <div class="col-xs-12 col-sm-4">
