Updated copy for Get Started

--- a/my-take.html
+++ b/my-take.html
@@ -163,9 +163,9 @@ title: Fudsquare
 
 
 
-<div class="row sales-dribbble">
+<div class="row started">
   <div class="col-sm-8 col-sm-offset-2 text-center" style="padding:5em;">
-    <h3>Increase Your Sales Now.</h3>
+    <h3>The Best Dishes are Waiting for You</h3>
     <button type="button" class="btn btn-success btn-block">Get Started ></button>
   </div>
 </div>
