--- a/my-take.html
+++ b/my-take.html
@@ -30,8 +30,8 @@ title: Fudsquare
         <a class="navbar-brand" href="#"><img src="{{ site.baseurl }}/images/Logo.png"></a>
       </div>
       <ul class="nav navbar-nav">
-        <li><a href="#">PRICING</a></li>
         <li><a href="#">FEATURES</a></li>
+          <li><a href="#">ABOUT</a></li>
         <li><a href="#">HELP</a></li>
       </ul>
 
@@ -113,10 +113,10 @@ title: Fudsquare
     <img class="img-responsive" style="margin-top: 5em;" src="{{ site.baseurl }}/images/Samsung.png">
   </div>
   <div class="col-xs-12 col-sm-6">
-    <div class="hidden-xs" style="height: 6em;">
+    <div class="hidden-xs" style="height: 12em;">
       &nbsp;
     </div>
-    <h3 style="margin-top:2em;">Checkin Place.</h3>
+    <h3 style="margin-top:2em;">Find the Best Resturants</h3>
     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enimad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip
       ex ea commodo consequat.</p>
   </div>
@@ -130,7 +130,7 @@ title: Fudsquare
     <div class="hidden-xs" style="height: 10em;">
       &nbsp;
     </div>
-    <h3 style="margin-top:2em;">Order With Application.</h3>
+    <h3 style="margin-top:2em;">See the Full Menu</h3>
     <p class="">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enimad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip
       ex ea commodo consequat.</p>
   </div>
