Added My Take Link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Fudsquare
     </p>
     <h2>Finding a Candidate</h2>
     <p>
-      I located a design that would be suitable for the project. I located this <a href="https://dribbble.com/shots/2430185-Fudsquare-Website">mock up on Dribbble</a> by Muhamad Reza Adityawarman. The problem with the mock up is that it is a flat <abbr title="Portable Network Graphic">PNG</abbr> file so the text is saved on top of the background images. This meant that I would have to fire up Photoshop to rid the backgrounds of the text, or find another way.
+      I located a design that would be suitable for the project. I located this <a href="https://dribbble.com/shots/2430185-Fudsquare-Website">mock up on Dribbble</a> by Muhamad Reza Adityawarman. The problem with the mock up is that it is a flat <abbr title="Portable Network Graphic">PNG</abbr> file so the text is saved on top of the background images. This meant that I would have to fire up Photoshop to rid the backgrounds of the text, or find another way to get the background images.
     </p>
     <h2>Sourcing the Background Files</h2>
     <p>
@@ -32,11 +32,17 @@ title: Fudsquare
         I then created a new project using Jekyll, deleted unneccessary default files that Jekyll generates for a new project, and added the Bootsrap CDN links. I used dummy images using Placehold.it to quickly work through the rough layout. <a href="rough_layout.html">I ended up with this</a>.
       </p>
       <h2>Refining the Rough Layout</h2>
+      <h3>Porting the Web Page Design</h3>
       <p>
-        The next thing I worked on was adding the images from the archived html mock up to create a responsive bootstrap port of the design. <a href="webpage-port.html">Here is where you can see my progress</a>. It is nearly finished.
+        The next thing I worked on was adding the images from the archived html mock up to create a responsive bootstrap port of the design. <a href="webpage-port.html">Here is where you can see my progress</a>.
       </p>
+      <h3>Porting the Dribbble Design</h3>
       <p>
-        Once i finished the web page port, I made the changes to reflect the final design from Dribbble. <a href="dribbble-port.html">Here is where you can see my progress</a>. It is not as finished as the web page port.
+        Once I finished the web page port, I made the changes to reflect the final design from Dribbble. <a href="dribbble-port.html">Dribbble Port to Bootstrap</a>.
+      </p>
+      <h2>My Take on Things</h2>
+      <p>
+        <a href="my-take.html">My take on the design</a>.
       </p>
   </div>
 </div>
