--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+---
+title: Fudsquare
+---
 <!DOCTYPE html>
 <html lang="en">
 
@@ -13,6 +16,20 @@
   <link rel="stylesheet" href="/Fudsquare-Migration/css/stylesheet.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <script src="/Fudsquare-Migration/js/fudsquare.js"></script>
+
+  {% if jekyll.environment == "production" %}
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-70020006-1', 'auto');
+      ga('send', 'pageview');
+    </script>
+
+  {% endif %}
 
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
