--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ---
 title: Fudsquare
+published: true
 ---
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -134,24 +136,17 @@ title: Fudsquare
             <h2>Refining the Rough Layout</h2>
             <div class="col-sm-6">
               <h3>Porting the Web Page Design</h3>
+              <a class="btn btn-default" href="webpage-port.html">HTML Port to Bootstrap</a>
               <p>
                 The next thing I worked on was adding the images from the archived html mock up to create a responsive bootstrap port of the design.
               </p>
             </div>
             <div class="col-sm-6">
               <h3>Porting the Dribbble Design</h3>
+              <a class="btn btn-default" href="dribbble-port.html">Dribbble Port to Bootstrap</a>
               <p>
                 Once I finished the web page port, I made the changes to reflect the final design from Dribbble.
               </p>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col-sm-6">
-              <a class="btn btn-default" href="webpage-port.html">HTML Port to Bootstrap</a>.
-            </div>
-            <div class="col-sm-6">
-              <a class="btn btn-default" href="dribbble-port.html">Dribbble Port to Bootstrap</a>
             </div>
           </div>
 
