Fixed Canonical link

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ title: Fudsquare
 published: true
 ---
 
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -13,7 +14,7 @@ published: true
 
 
   <title>Fudsquare</title>
-  <link rel="canonical" href="http://akajut.github.io/Fudsquare-Migration/test.html">
+  <link rel="canonical" href="http://akajut.github.io/Fudsquare-Migration/">
   <link rel="stylesheet" href="/Fudsquare-Migration/css/main.css">
   <link rel="stylesheet" href="/Fudsquare-Migration/css/stylesheet.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
